--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <style>
-      h1, h2, h3, h4, h5, h6, h7 {
-        text-decoration: underline;
-      }
-</style>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Portfolio</title>
@@ -14,73 +8,73 @@
 </head>
 <body>
   <div class="container">
-    <header class="header">
+    <header>
       <h1>Mohamed Ali</h1>
-      <p>(320) 224-9122   | mohamedali.work2019@gmail.com | 
-      <a href="https://www.linkedin.com/in/mohamed-ali-346818223/">MY LINKEDIN</a>
-       </p>
+      <p>(320) 224-9122 | mohamedali.work2019@gmail.com | <a href="https://www.linkedin.com/in/mohamed-ali-346818223/">MY LINKEDIN</a></p>
     </header>
-    <section class="section">
+
+    <section>
       <h2>Professional Experience</h2>
-      <h3>Data Glacier, Remote (Unpaid)</h3>
-      <p><strong>Data Analyst Intern</strong> (Dec 2022 - March 2023)</p>
-      <ul>
-        <li>Completed a multi-project internship in data science and analytics, mentored by industry professionals</li>
-        <li>Worked with cross-functional teams to identify business problems</li>
-        <li>Improved data analytics skills through ongoing training and development opportunities provided by the internship program</li>
-        
-      </ul>
-      <h4>SCSU IS Club, St. Cloud</h4>
-      <p><strong>Webmaster</strong> (Jan 2022 - May 2022)</p>
-      <ul>
-        <li>Tracked down web errors</li>
-        <li>Maintained a well-functioning web</li>
-        <li>Managed and monitored server performance</li>
-        <li>Uploaded and updated web pages</li>
-        <li>Designed and organized web content</li>
-      </ul>
-      <h3>Sam's Club, St. Cloud</h3>
-      <p><strong>Retail Sales Specialist</strong> (June 2020 - May 2022)</p>
-      <ul>
-        <li>Marketed company's promotions</li>
-        <li>Handled large financial payments and records</li>
-        <li>Trained and mentored new employees</li>
-        <li>Organized all operations, focusing on quality and consistency</li>
-        <li>Used Tech efficiently for communication across departments</li>
-      </ul>
+      <article>
+        <h3>Data Glacier, Remote (Unpaid)</h3>
+        <p><strong>Data Analyst Intern</strong> (Dec 2022 - March 2023)</p>
+        <ul>
+          <li>Completed a multi-project internship in data science and analytics, mentored by industry professionals</li>
+          <li>Worked with cross-functional teams to identify business problems and gather requirements for data analysis projects</li>
+          <li>Continuously improved data analytics skills through ongoing training and development opportunities provided by the internship program</li>
+        </ul>
+      </article>
+
+      <article>
+        <h3>SCSU IS Club, St. Cloud</h3>
+        <p><strong>Webmaster</strong> (Jan 2022 - May 2022)</p>
+        <ul>
+          <li>Identified and resolved web errors to maintain a well-functioning website</li>
+          <li>Managed and monitored server performance to ensure optimal uptime</li>
+          <li>Uploaded and updated web pages with new content and features</li>
+          <li>Designed and organized web content to enhance user experience</li>
+        </ul>
+      </article>
+
+      <article>
+        <h3>Sam's Club, St. Cloud</h3>
+        <p><strong>Retail Sales Specialist</strong> (June 2020 - May 2022)</p>
+        <ul>
+          <li>Marketed company's promotions to drive sales and increase revenue</li>
+          <li>Processed large financial payments and maintained accurate records</li>
+          <li>Trained and mentored new employees to ensure consistent performance across the team</li>
+          <li>Organized all operations to prioritize quality and efficiency</li>
+          <li>Used technology efficiently for communication and collaboration across departments</li>
+        </ul>
+      </article>
     </section>
-    <section class="section">
+
+    <section>
       <h2>Skills</h2>
-      <h3>Programming Languages</h3>
-      <ul>
-        <li>C#</li>
-        <li>JavaScript</li>
-        <li>Python</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Linux</li>
-        <li>Data Visualization</li>
-        <li>MS Word, Excel, & Access</li>
-        <li>SQL / ETL</li>
-      </ul>
-  
-  </section>
+      <article>
+        <h3>Programming Languages</h3>
+        <ul>
+          <li>C#</li>
+          <li>JavaScript</li>
+          <li>Python</li>
+          <li>HTML</li>
+          <li>CSS</li>
+        </ul>
+      </article>
+
+      <article>
+        <h3>Tools & Technologies</h3>
+        <ul>
+          <li>Linux</li>
+          <li>Data Visualization</li>
+          <li>MS Word, Excel, & Access</li>
+          <li>SQL / ETL</li>
+        </ul>
+      </article>
+    </section>
+
+    </section>
     <section class="section">
   <h4>Projects</h4>
   <a href="https://public.tableau.com/app/profile/mohamed6040">Data Visualization Project on Tableau Software</a>
-</section>
-<section class="section">
-  <h5>Certifications & BADGES</h5>
-  <ul>AWS CLOUD FOUNDATIONS</ul>
-  <ul>NETWORKING FUNDAMENTALS</ul>
-  <ul>Leadership Badge (SCSU)</ul>
-</section>
-
-<section class="section">
-  <h6>VOLUNTEERS</h6>
-  <ul>Youth Build, St. Cloud  June 2018 - July 2018
-    <li>Built sheds & Benches for elementary for High Schools </li>
-    <li>Built a playground for Success Academy</li>
-  </ul>
-  
 </section>
